fix label alignment in radio and checkbox

--- a/src/app/powell/components/checkbox-group/checkbox-group.component.scss
+++ b/src/app/powell/components/checkbox-group/checkbox-group.component.scss
@@ -2,6 +2,10 @@
   display: block;
 
   ::ng-deep {
+    p-checkbox {
+      display: inherit;
+    }
+
     .checkbox-group-wrapper {
       display: flex;
       position: relative;
